# The-Machine

./: CMakeLists.txt  README.md
The Machine/: AppDelegate.swift  Info.plist  Logic puzzle design.txt  anim helpers.js  main.cpp
The Machine.xcodeproj/: project.pbxproj
The Machine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
The Machine.xcodeproj/xcuserdata/indikernick.xcuserdatad/xcschemes/: The Machine.xcscheme  xcschememanagement.plist
The Machine/Base.lproj/: MainMenu.xib
The Machine/Game/: anim sprite component.hpp  anim sprite init.cpp  anim sprite init.hpp  anim sprite writer.cpp  anim sprite writer.hpp  app.cpp  app.hpp  button component.hpp  button system.cpp  button system.hpp  channel sprite component.hpp  channel sprite init.cpp  channel sprite init.hpp  clear desired dir system.cpp  clear desired dir system.hpp  clear player input system.cpp  clear player input system.hpp  clear real dir system.cpp  clear real dir system.hpp  collision component.cpp  collision component.hpp  collision init.cpp  collision init.hpp  component inits.hpp  component list.hpp  cross wire component.hpp  cross wire sprite component.hpp  cross wire sprite init.cpp  cross wire sprite init.hpp  cross wire sprite writer.cpp  cross wire sprite writer.hpp  delay component.hpp  delay init.cpp  delay init.hpp  delay system.cpp  delay system.hpp  device component.hpp  device input states system.cpp  device input states system.hpp  device input system.cpp  (+166 more)
The Machine/Resources/: air entity.libsonnet  assemble.libsonnet  assemblies.libsonnet  box entity.libsonnet  button entity.libsonnet  common.libsonnet  cross wire entity.libsonnet  delay entity.libsonnet  entities.libsonnet  exit entity.libsonnet  gate entity.libsonnet  level 0.jsonnet  lever entity.libsonnet  piston assembly.libsonnet  piston base entity.libsonnet  piston head entity.libsonnet  player entity.libsonnet  pressure plate entity.libsonnet  radioactive toggle entity.libsonnet  radioactivity detector entity.libsonnet  signal receiver entity.libsonnet  signal transmitter entity.libsonnet  sprite config.json  sprite shader.frag  sprite shader.vert  sprites.atlas  title screen config.json  title screen.atlas  wall entity.libsonnet  wire entity.libsonnet
The Machine/Resources/Animations/: box.anim  button.anim  cross wire.anim  delay.anim  exit.anim  gates.anim  lever.anim  piston base.anim  piston head.anim  player.anim  pressure plate.anim  radioactive toggle.anim  radioactivity detector.anim  signal channel.anim  signal receiver.anim  signal transmitter.anim  title screen.anim  wall.anim  wire.anim
The Machine/Resources/Levels/: assemble.libsonnet  assemblies.libsonnet  box entity.libsonnet  button entity.libsonnet  common.libsonnet  entities.libsonnet  exit entity.libsonnet  gate entity.libsonnet  image assembly.libsonnet  level 0.jsonnet  level 1.jsonnet  level 10.jsonnet  level 11.jsonnet  level 12.jsonnet  level 13.jsonnet  level 14.jsonnet  level 15.jsonnet  level 16.jsonnet  level 17.jsonnet  level 2.jsonnet  level 3.jsonnet  level 4.jsonnet  level 5.jsonnet  level 6.jsonnet  level 7.jsonnet  level 8.jsonnet  level 9.jsonnet  lever entity.libsonnet  piston base entity.libsonnet  player entity.libsonnet  pressure plate entity.libsonnet  radioactive toggle entity.libsonnet  radioactivity detector entity.libsonnet  rectangle assembly.libsonnet  signal receiver entity.libsonnet  signal transmitter entity.libsonnet  wire entity.libsonnet  wire image assembly.libsonnet
The Machine/Resources/Music/: music.json
The Machine/Resources/Spritesheets/: sprite config.json  sprites.atlas  title screen config.json  title screen.atlas
Webpage/: index.html  init.js
